Fixed spacing issue

--- a/src/app/popover-preview-bp-section/popover-preview-bp-section.component.scss
+++ b/src/app/popover-preview-bp-section/popover-preview-bp-section.component.scss
@@ -2,7 +2,7 @@
   //background: #fff;
   .scill-progress{
     padding-left:10px; padding-right:10px;
-    padding-top:15px;
+    padding-bottom:15px;
   }
   .battle-pass-title{
     color:#CF0E00;
